# some_demos

find_max_unio/: README.md  analyze_union_max_member.py  super_complex.c  super_complex.i
output/output/: CMakeLists.txt  test.sh
output/output/src/: CMakeLists.txt  main.c
output/output/src/algo/: CMakeLists.txt  sort.c  sort.h
output/output/src/io/: CMakeLists.txt  fileio.c  fileio.h
output/output/src/math/: CMakeLists.txt  arith.c  arith.h
output/output/src/moduleA/: CMakeLists.txt
output/output/src/moduleA/moduleA1/: CMakeLists.txt
output/output/src/moduleA/moduleA1/moduleA1a/: CMakeLists.txt  moduleA1a.c  moduleA1a.h
output/output/src/moduleA/moduleA1b/: CMakeLists.txt  moduleA1b.c  moduleA1b.h
output/output/src/moduleA/moduleA2/: CMakeLists.txt
output/output/src/moduleA/moduleA2/moduleA2a/: CMakeLists.txt  moduleA2a.c  moduleA2a.h
output/output/src/moduleA/moduleA2/moduleA2b/: CMakeLists.txt  moduleA2b.c  moduleA2b.h
output/output/src/moduleB/: CMakeLists.txt
output/output/src/moduleB/moduleB1/: CMakeLists.txt
output/output/src/moduleB/moduleB1/moduleB1a/: CMakeLists.txt  moduleB1a.c  moduleB1a.h
output/output/src/moduleB/moduleB1/moduleB1b/: CMakeLists.txt  moduleB1b.c  moduleB1b.h
output/output/src/moduleB/moduleB2/: CMakeLists.txt
output/output/src/moduleB/moduleB2/moduleB2a/: CMakeLists.txt  moduleB2a.c  moduleB2a.h
output/output/src/moduleB/moduleB2/moduleB2b/: CMakeLists.txt  moduleB2b.c  moduleB2b.h
output/output/src/moduleC/: CMakeLists.txt
output/output/src/moduleC/moduleC1/: CMakeLists.txt
output/output/src/moduleC/moduleC1/moduleC1a/: CMakeLists.txt  moduleC1a.c  moduleC1a.h
output/output/src/moduleC/moduleC2/: CMakeLists.txt
output/output/src/net/: CMakeLists.txt  socket.c  socket.h
output/output/src/util/: CMakeLists.txt  log.c  log.h
output/output/test_proj/: CMakeLists.txt  README.txt  main.c
plugin1/: Makefile  README.md  main_production  main_production.c  main_simple  main_simple.c  mock_system_library.h  plugin_interface.h  plugin_manager.c  plugin_manager.h  plugin_value_plugin.c  production_plugin.c  test_system.c  test_with_wrapper.c  universal_demo.c  universal_wrapper.c
plugin2/: Makefile  README.md  plugin_interface.h  universal_wrapper.h
plugin3/: Makefile  README.md  mock_system_library.c  test_variable_override.c  variable_override.c
readline/: CMakeLists.txt  main.c  readline.c  readline.h  test.c
shell/: README.md  build.sh  config.conf  multi_tool.sh
soLink/: Makefile  README.md  a.txt  blackbox_library.c  example_program  example_program.c
test/: CMakeLists.txt  app_with_plugin  build_explicitly.sh  build_normal_case.sh  build_with_weak_symbol.sh  main.c  main.h  normal_consumer.c  normal_consumer_app  special.c  special.h  test_app.c
test/build1/: CMakeCache.txt  Makefile  cmake_install.cmake  test_app
test/build_gcov/: CMakeCache.txt  Makefile  cmake_install.cmake  test_app
test/build_gcov_error/: CMakeCache.txt
(+9 files in other folders)
